testdata/golden/sema/invalid/default_reference.fmt
fn main() {
    let x: int = 1;
    let _ = default::<&int>();
    let _y = x;
}
